--- a/index.html
+++ b/index.html
@@ -134,14 +134,7 @@
 	</div>
 
 	<ul class="ui-nodisc-icon sortable" data-role="listview" data-inset="true" id="SRSList">
-		<li data-role="list-divider">Service Requests</li>
-		<li class="sectionItem">
-			<a href="#">
-				<span class="icon_vector icon_maintenance_blue" style="float:left !important;"></span>
-				Request Service
-			</a>
-			<span class="ui-li-count" style="display: none;">0</span>
-		</li>
+		<li data-role="list-divider">Examples</li>
 		<li class="sectionItem">
 			<a href="#">
 				<span class="icon_vector icon_today" style="float:left !important;"></span>
@@ -151,92 +144,10 @@
 		</li>
 		<li class="sectionItem">
 			<a href="#">
-				<span class="icon_vector icon_week" style="float:left !important;"></span>
-				All Requests
-			</a>
-			<span class="ui-li-count" style="">3</span>
-		</li>
-	</ul>
-
-	<ul class="ui-nodisc-icon sortable" data-role="listview" data-inset="true" id="PMList">
-		<li data-role="list-divider">Conference Room</li>
-		<li class="sectionItem">
-			<a href="#">
-				<span class="icon_vector icon_mobile_bulkupdate" style="float:left !important;"></span>
-				Make Reservation
-			</a>
-			<span class="ui-li-count" style="display: none;">0</span>
-		</li>
-		<li class="sectionItem">
-			<a href="#">
 				<span class="icon_vector icon_today" style="float:left !important;"></span>
 				Your Reservations
 			</a>
 			<span class="ui-li-count" style="">1</span>
-		</li>
-		<li class="sectionItem">
-			<a href="#">
-				<span class="icon_vector icon_week" style="float:left !important;"></span>
-				All Reservations
-			</a>
-			<span class="ui-li-count" style="">1</span>
-		</li>
-		<li class="sectionItem">
-			<a href="#">
-				<span class="icon_vector icon_calendar_new" style="float:left !important;"></span>
-				View Calendar
-			</a>
-			<span class="ui-li-count" style="display: none;">0</span>
-		</li>
-	</ul>
-
-	<ul class="ui-nodisc-icon sortable" data-role="listview" data-inset="true" id="Portal">
-		<li data-role="list-divider">Portal</li>
-		<li class="sectionItem">
-			<a href="#" class="ui-btn-noicon ui-btn ui-btn-icon-right">
-				<span class="icon_vector icon_newwindow_blue2" style="float:left !important;"></span>
-				View Portal
-			</a>
-			<span class="ui-li-count" style="display: none;">0</span>
-		</li>
-		<li class="sectionItem">
-			<a href="#">
-				<span class="icon_vector icon_yellowcaution" style="float:left !important;"></span>
-				Alerts
-			</a>
-			<span class="ui-li-count" style="">1</span>
-		</li>
-	</ul>
-
-	<ul class="ui-nodisc-icon sortable" data-role="listview" data-inset="true" id="Account">
-		<li data-role="list-divider">Account</li>
-		<li class="sectionItem">
-			<a href="#">
-				<span class="icon_vector icon_email_red" style="float:left !important;"></span>
-				Message Center
-			</a>
-			<span class="ui-li-count" style="">3</span>
-		</li>
-		<li class="sectionItem">
-			<a href="#">
-				<span class="icon icon_user_small" style="float:left !important;"></span>
-				Account Details
-			</a>
-			<span class="ui-li-count" style="display: none;">0</span>
-		</li>
-		<li class="sectionItem">
-			<a href="#">
-				<span class="icon_vector icon_report_caution icon_opacity50" style="float:left !important;"></span>
-				Notification Preferences
-			</a>
-			<span class="ui-li-count" style="display: none;">0</span>
-		</li>
-		<li class="sectionItem">
-			<a href="#" class="ui-btn-noicon ui-btn ui-btn-icon-right">
-				<span class="icon_vector icon_caret_left_red"></span>
-				Sign Out
-			</a>
-			<span class="ui-li-count" style="display: none;">0</span>
 		</li>
 	</ul>
 
