--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 </head>
 
-<body>
+<body style="background-color:#333;">
 	
 	<div data-role="page" class="mobile-wrapper">
 
@@ -137,14 +137,14 @@
 		<li data-role="list-divider">Examples</li>
 		<li class="sectionItem">
 			<a href="#">
-				<span class="icon_vector icon_today" style="float:left !important;"></span>
+				<span class="icon-white icon_today" style="float:left !important;"></span>
 				Your Requests
 			</a>
 			<span class="ui-li-count" style="">2</span>
 		</li>
 		<li class="sectionItem">
 			<a href="#">
-				<span class="icon_vector icon_today" style="float:left !important;"></span>
+				<span class="icon-white icon_today" style="float:left !important;"></span>
 				Your Reservations
 			</a>
 			<span class="ui-li-count" style="">1</span>
