--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 	<div data-role="panel" id="panel-overlay" data-display="overlay" data-position-fixed="true" class="ui-nodisc-icon">
 
 		<a href="#flyout_origin" data-rel="close" data-ajax="false"><span class="icon_vector icon_mobile_close"></span></a>
+		<br/><br/>
 		<ul data-role="listview" data-inset="true">
 			<li><a href="#">Send Example SR Push Notification</a></li>
 			<li><a href="#">Send Example CR Push Notification</a></li>
@@ -126,14 +127,13 @@
 				<span class="icon-white icon_today" style="float:left !important;"></span>
 				Your Requests
 			</a>
-			<span class="ui-li-count" style="">2</span>
+			<!--<span class="ui-li-count" style="">2</span>-->
 		</li>
 		<li class="sectionItem">
 			<a href="#">
 				<span class="icon-white icon_today" style="float:left !important;"></span>
 				Your Reservations
 			</a>
-			<span class="ui-li-count" style="">1</span>
 		</li>
 	</ul>
 
