--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 		<a href="#flyout_origin" data-rel="close" data-ajax="false"><span class="icon_vector icon_mobile_close"></span></a>
 		<br/><br/>
 		<ul data-role="listview" data-inset="true">
-			<li><a id="send_push_sr" href="javascript(void())" data-role="none" data-ajax="false">Send Example SR Push Notification</a></li>
-			<li><a id="send_push_cr" href="javascript(void())" data-role="none" data-ajax="false">Send Example CR Push Notification</a></li>
+			<li><a id="send_push_sr" href="javascript:void()" data-role="none" data-ajax="false">Send Example SR Push Notification</a></li>
+			<li><a id="send_push_cr" href="javascript:void()" data-role="none" data-ajax="false">Send Example CR Push Notification</a></li>
 			<li class="notification_delay_wrapper">Delay: <input id="notification_delay" type="text" value="10"/> seconds</li>
 			<li class="sending_notification_message sending_notification_message_off">sending notification in <span class="delay_display"></span> seconds...</li>
 		</ul>
