setting up push

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	
 	<div data-role="page" class="mobile-wrapper">
 
-	<div data-role="panel" id="panel-overlay" data-display="overlay" data-position-fixed="true" class="ui-nodisc-icon">
+	<div data-role="panel" id="panel-overlay" data-display="overlay" data-position-fixed="true" data-dismissible="false" class="ui-nodisc-icon">
 
 		<a href="#flyout_origin" data-rel="close" data-ajax="false"><span class="icon_vector icon_mobile_close"></span></a>
 		<br/><br/>
