setting up push

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			vertical-align: middle;
 			margin: 17px 5px;
 		}
-		.notification_delay_wrapper.ui-li-static {
+		.ui-panel li.notification_delay_wrapper.ui-li-static {
 			background-color: #2d5278 !important;
 			border: 0px none;
 			color: #fff;
