--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			$("#send_push_sr,#send_push_cr").click(function(){
 				$(".sending_notification_message").removeClass("sending_notification_message_off");
 				$(".delay_display").html($("#notification_delay").val());
-				setTimeout(function(){$(".sending_notification_message").addClass("sending_notification_message_off")},$("#notification_delay").val());
+				setTimeout(function(){$(".sending_notification_message").addClass("sending_notification_message_off")},$("#notification_delay").val()*1000);
 			})
 		})
 	</script>
