--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 	<script src="/scripts/jquery_placeholder/jquery.placeholder.min.js"></script>
 	
 	<script type="text/javascript">
+		var push_type;
 		$(document).ready(function(){
 			$('input, textarea').placeholder();
 			if(!iOS){
@@ -72,7 +73,7 @@
 			cursor:default;
 		}
 		.sending_notification_message_off{
-			opacity:0.0;
+			opacity:0.0 !important;
 		}
 		.ui-panel-inner .ui-input-text {
 			width: 30px;
