--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<script src="/scripts/jquery_placeholder/jquery.placeholder.min.js"></script>
 	
 	<script type="text/javascript">
-		var push_type;
+		var push_type,varbody,varicon;
 		$(document).ready(function(){
 			$('input, textarea').placeholder();
 			if(!iOS){
