--- a/service_workers/index.html
+++ b/service_workers/index.html
@@ -16,44 +16,44 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="/scripts/jquery.mobile-1.4.5/demos/css/themes/default/jquery.mobile-1.4.5.min.css">
-	<link rel="stylesheet" type="text/css" href="/styles/mtm_content_elements.css?v2">
-	<link rel="stylesheet" type="text/css" href="/styles/mtm_content_elements_tc.css">
-	<link rel="stylesheet" type="text/css" href="/styles/icons.css">
+	<link rel="stylesheet" type="text/css" href="./scripts/jquery.mobile-1.4.5/demos/css/themes/default/jquery.mobile-1.4.5.min.css">
+	<link rel="stylesheet" type="text/css" href="./styles/mtm_content_elements.css?v2">
+	<link rel="stylesheet" type="text/css" href="./styles/mtm_content_elements_tc.css">
+	<link rel="stylesheet" type="text/css" href="./styles/icons.css">
 
 	<!-- \\ Meta data for various iOS devices -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/mtm-apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="192x192" href="/mtm-apple-touch-icon-192.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/mtm-apple-touch-icon-152.png">
-	<link rel="apple-touch-icon" sizes="128x128" href="/mtm-apple-touch-icon-128.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/mtm-apple-touch-icon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/mtm-apple-touch-icon-76.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/mtm-apple-touch-icon-60.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./mtm-apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="192x192" href="./mtm-apple-touch-icon-192.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./mtm-apple-touch-icon-152.png">
+	<link rel="apple-touch-icon" sizes="128x128" href="./mtm-apple-touch-icon-128.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./mtm-apple-touch-icon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./mtm-apple-touch-icon-76.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./mtm-apple-touch-icon-60.png">
 	<!-- \\ Icon support for Android \\ -->
-	<link rel="icon" sizes="180x180" href="/mtm-apple-touch-icon.png">
-	<link rel="icon" sizes="192x192" href="/mtm-apple-touch-icon-192.png">
-	<link rel="icon" sizes="152x152" href="/mtm-apple-touch-icon-152.png">
-	<link rel="icon" sizes="128x128" href="/mtm-apple-touch-icon-128.png">
-	<link rel="icon" sizes="120x120" href="/mtm-apple-touch-icon-120.png">
-	<link rel="icon" sizes="76x76" href="/mtm-apple-touch-icon-76.png">
-	<link rel="icon" sizes="60x60" href="/mtm-apple-touch-icon-60.png">
+	<link rel="icon" sizes="180x180" href="./mtm-apple-touch-icon.png">
+	<link rel="icon" sizes="192x192" href="./mtm-apple-touch-icon-192.png">
+	<link rel="icon" sizes="152x152" href="./mtm-apple-touch-icon-152.png">
+	<link rel="icon" sizes="128x128" href="./mtm-apple-touch-icon-128.png">
+	<link rel="icon" sizes="120x120" href="./mtm-apple-touch-icon-120.png">
+	<link rel="icon" sizes="76x76" href="./mtm-apple-touch-icon-76.png">
+	<link rel="icon" sizes="60x60" href="./mtm-apple-touch-icon-60.png">
 	<!-- \\ Include android web app manifest \\ -->
-	<link rel="manifest" href="/manifest.json">
+	<link rel="manifest" href="./manifest.json">
 
 
-	<script src="/scripts/mobile/disableAjaxLinks.js"></script><!-- this has to be loaded before jquery mobile to work -->
-	<script src="/scripts/mobile/bookmarkbubble.min.js"></script>
-	<script src="/scripts/mobile/deviceDetection.js"></script>
+	<script src="./scripts/mobile/disableAjaxLinks.js"></script><!-- this has to be loaded before jquery mobile to work -->
+	<script src="./scripts/mobile/bookmarkbubble.min.js"></script>
+	<script src="./scripts/mobile/deviceDetection.js"></script>
 
 
-	<script src="/scripts/jquery.mobile-1.4.5/demos/js/jquery.mobile-1.4.5.min.js"></script>
-	<script type="text/javascript" src="/scripts/jquery_ui_dragsort/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="/scripts/touchpunch/touchpunch.js"></script>
-	<script src="/scripts/mobile/feedback_messages.js"></script>
-	<script src="/scripts/mobile/convertColdFusionJSON.js"></script>
-	<script src="/scripts/mobile/mobile.js"></script>
+	<script src="./scripts/jquery.mobile-1.4.5/demos/js/jquery.mobile-1.4.5.min.js"></script>
+	<script type="text/javascript" src="./scripts/jquery_ui_dragsort/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="./scripts/touchpunch/touchpunch.js"></script>
+	<script src="./scripts/mobile/feedback_messages.js"></script>
+	<script src="./scripts/mobile/convertColdFusionJSON.js"></script>
+	<script src="./scripts/mobile/mobile.js"></script>
 	<!-- display placeholder values for inputs on IE9 and below -->
-	<script src="/scripts/jquery_placeholder/jquery.placeholder.min.js"></script>
+	<script src="./scripts/jquery_placeholder/jquery.placeholder.min.js"></script>
 	
 	<script type="text/javascript">
 		var push_type,varbody,varicon;
@@ -193,7 +193,7 @@
 
 </div><!-- page .mobile-wrapper end -->
 
-<script src="/scripts/index.js"></script>
+<script src="./scripts/index.js"></script>
 
 </body>
 </html>
