--- a/service_workers/index.html
+++ b/service_workers/index.html
@@ -59,9 +59,9 @@
 		var push_type,varbody,varicon;
 		$(document).ready(function(){
 			$('input, textarea').placeholder();
-			if(!iOS){
+			/*if(!iOS){
 				$('#BubbleAnchor').hide();
-			}
+			}*/
 		})
 	</script>
 
