--- a/service_workers/index.html
+++ b/service_workers/index.html
@@ -59,9 +59,9 @@
 		var push_type,varbody,varicon;
 		$(document).ready(function(){
 			$('input, textarea').placeholder();
-			/*if(!iOS){
+			if(!iOS){
 				$('#BubbleAnchor').hide();
-			}*/
+			}
 		})
 	</script>
 
@@ -130,7 +130,7 @@
 		<br/>
 		<div class="tooltip" style="color:#ccc;text-shadow:none">
 			<span class="icon_vector icon_info inline_icon"></span> 
-			How to test: First if you're on an android device, tap the add to home screen button. Check that it's on your home screen and come back to this page via the new icon. Click one of the buttons above to send an example push notification. Go back to your home screen before the delay runs out. You should receive the notification. You can also test this on a desktop as long as you accepted the permissions asked by the browser.
+			How to test: First if you're on an android device, add this site to your homescreen as a bookmark. Check that it's on your home screen and come back to this page via the new icon. Click one of the buttons above to send an example push notification. Go back to your home screen before the delay runs out. You should receive the notification. You can also test this on a desktop as long as you accepted the permissions asked by the browser.
 		</div>
 		<div id="BubbleAnchor" style="position:fixed; bottom:10px; width:90%;">
 			<button class="ui-btn ui-shadow ui-corner-all homeIconShortcut">Add to Home Screen</button>
